# notepad

./: .env  Cargo.toml  README.md
.cargo/: config.toml
db/migrations/: 00001_init_database.sql
src/: main.rs  options.lua  state.rs
src/folder/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
src/note/: handlers.rs  models.rs  routes.rs  services.rs
src/tag/: handlers.rs  models.rs  routes.rs  services.rs
