[package]
name = "np"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"]}
hyper = { version = "0.14", features = ["full"] }
testcontainers = "0.14.0"
